# tesseract_collision_benchmarks

./: CMakeLists.txt  colcon.pkg  package.xml
data/: benchmark_data_v2.ods  contact_manager_plugins.yaml  panda.srdf  panda.urdf
include/tesseract_collision_benchmark/: types.h
scripts/: plot_benchmark_csv.py
src/: tesseract_collision_benchmark.cpp  tesseract_collision_benchmark_only.cpp
